# Win32X

./: .gitignore  CMakeLists.txt  CMakePresets.json  CdevWin32Xbuilda3_btnbounds.txt  Directory.Build.props  Directory.Build.targets  README.md  THEME-PAINT-MESSAGE-CONTRACT.txt  Win32X.slnx  WinMainEx.slnx  comctl32.imports.txt  cursortest.ps1  dwmapi.disasm.txt  dwmframex-flickerfree-resize-surgical-plan.md  immersivewindow-flicker-free-synthesis.md  repo-research-BorderlessWindow32.md
Win32X/: ShellScalingApiX.c  Win32X.vcxproj  Win32X.vcxproj.filters  WinBaseXText.inl
WinBaseX/: ShellScalingApiXThunks.inl  WinBaseX.c  WinBaseX.h  WinBaseX.vcxproj  WinBaseX.vcxproj.filters  WinBaseXStartupA.c  WinBaseXStartupW.c  WinBaseXText.inl  WinUserX.c  WinUserX.h  WinUserXThunks.inl  delayhlpx.c  delayimpx.h  processenvx.c  processenvx.h  processenvxA.c  processenvxText.inl  processenvxW.c  result.h  versionhelpersx.c  versionhelpersx.h  versionhelpersxThunks.inl  windefx.h
WinMainEx/: WinMainEx.vcxproj  WinMainEx.vcxproj.filters  WindowsProject.vcxproj  app.manifest  prebuild.ps1  winmain.c
cmake/: Win32XConfig.cmake.in  Win32XPolicy.cmake
docs/: theme-paint-message-contract.md
examples/: CMakeLists.txt  Resource.h  WinMainEx.vcxproj  WindowsProject.rc  framework.h  main.c  main_v2.c  poc.cpp  targetver.h  waitcursorsrv.c  winmain.c  winmain_win32fork.c.bak
include/: WinBaseX.h  delayimpx.h  win32x.h
include/Win32X/: ShellScalingApiX.h  WinUserX.h  delayimpx.h  dwmframex.h  dwmframex2.h  uxthemex.h  versionhelpersx.h  windowsx2.h
src/: CMakeLists.txt  ShellScalingApiX.c  Win32X.vcxproj  Win32X.vcxproj.filters  WinBaseX.c  WinBaseXStartupA.c  WinBaseXStartupW.c  WinBaseXText.inl  WinUserX.c  delayhlpx.c  dwmframex.c  dwmframex_v2.c  llmath_x86.c  processenvxA.c  processenvxText.inl  processenvxW.c  uxthemex.c  versionhelpersx.c
tests/: CMakeLists.txt  Tests.vcxproj  build_probe.bat  dpi-placement.ps1  dxgi_probe.c  msgwal.h  msgwal_hook.c  test_harness.c  tests.inl  theme_reduce.hlsl
